--- a/src/main/webapp/app/entities/play-list/play-list.component.html
+++ b/src/main/webapp/app/entities/play-list/play-list.component.html
@@ -1,64 +1,45 @@
-<div>
-    <h2>
-        <span>Play Lists</span>
-        <button class="btn btn-primary float-right jh-create-entity create-play-list" [routerLink]="['/', { outlets: { popup: ['play-list-new'] } }]">
-            <span class="fa fa-plus"></span>
-            <span >
-            Create new Play List
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <div class="row">
+<div class="row">
+    <div class="col-md-3 col-sm-5">
+        <h2>
+            <span>Playlists</span>
+            <button class="btn btn-primary float-right jh-create-entity create-play-list" [routerLink]="['/', { outlets: { popup: ['play-list-new'] } }]">
+                <span class="fa fa-plus"></span>
+                <span>
+                    New Playlist
+                </span>
+            </button>
+        </h2>
+        <jhi-alert></jhi-alert>
+        <div class="row">
+        </div>
+        <br/>
+        <div class="table-responsive" *ngIf="playLists">
+            <table class="table table-striped">
+                <div>
+                    <div class="playlists" *ngFor="let playList of playLists ;trackBy: trackId">
+                        <div>
+                            <a [routerLink]="['../play-list', playList.id ]">{{playList.name}}</a>
+                        </div>
+                        <div class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]" replaceUrl="true"
+                                    queryParamsHandling="merge" class="btn btn-primary btn-sm">
+                                    <span class="fa fa-pencil"></span>
+                                    <span class="d-none d-md-inline">Edit</span>
+                                </button>
+                                <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/delete'} }]" replaceUrl="true"
+                                    queryParamsHandling="merge" class="btn btn-danger btn-sm">
+                                    <span class="fa fa-remove"></span>
+                                    <span class="d-none d-md-inline">Delete</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </table>
+        </div>
     </div>
-    <br/>
-    <div class="table-responsive" *ngIf="playLists">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Name</span></th>
-            <th><span>Track</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let playList of playLists ;trackBy: trackId">
-                <td><a [routerLink]="['../play-list', playList.id ]">{{playList.id}}</a></td>
-                <td>{{playList.name}}</td>
-                <td>
-                    <div *ngIf="playList.track">
-                        <a [routerLink]="['../track', playList.track?.id ]" >{{playList.track?.id}}</a>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['../play-list', playList.id ]"
-                                class="btn btn-info btn-sm">
-                            <span class="fa fa-eye"></span>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-primary btn-sm">
-                            <span class="fa fa-pencil"></span>
-                            <span class="d-none d-md-inline">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <span class="fa fa-remove"></span>
-                            <span class="d-none d-md-inline">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="col-md-9 col-sm-7">
+        TEST
     </div>
 </div>
