initial structure for music display in one component with children: for sidebar and playlist (and music player later)

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -22,7 +22,7 @@
             </li>
             <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
             <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a class="nav-link" routerLink="play-list" (click)="collapseNavbar()">
+                <a class="nav-link" routerLink="music" (click)="collapseNavbar()">
                     <span>
                         My music
                     </span>
