--- a/src/main/webapp/app/musicView/music-sidebar/play-list-detail.component.html
+++ b/src/main/webapp/app/musicView/music-sidebar/play-list-detail.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="playList">
     <h2>
-        <span>Play List</span> {{playList.id}}</h2>
+        <span>Playlist details</span>
+    </h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
