--- a/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
+++ b/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
@@ -30,21 +30,23 @@
         <table class="table table-striped">
             <div>
                 <div class="playlists" *ngFor="let playList of playLists ;trackBy: trackId">
-                    <div>
-                        <a [routerLink]="['../play-list', playList.id ]">{{playList.name}}</a>
-                    </div>
-                    <div class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]" replaceUrl="true"
-                                queryParamsHandling="merge" class="btn btn-primary btn-sm">
-                                <span class="fa fa-pencil"></span>
-                                <span class="d-none d-md-inline">Edit</span>
-                            </button>
-                            <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/delete'} }]" replaceUrl="true"
-                                queryParamsHandling="merge" class="btn btn-danger btn-sm">
-                                <span class="fa fa-remove"></span>
-                                <span class="d-none d-md-inline">Delete</span>
-                            </button>
+                    <div [ngClass]="{playlistSelected: selectedPlaylist === playList.id, playlist: true}" (click)=selectPlaylist(playList.id)>
+                        <div>
+                            <span>{{playList.name}}</span>
+                        </div>
+                        <div class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]" replaceUrl="true"
+                                    queryParamsHandling="merge" class="btn btn-primary btn-sm playlist-action-button">
+                                    <span class="fa fa-pencil"></span>
+                                    <span class="d-none d-md-inline">Edit</span>
+                                </button>
+                                <button type="submit" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/delete'} }]" replaceUrl="true"
+                                    queryParamsHandling="merge" class="btn btn-danger btn-sm playlist-action-button">
+                                    <span class="fa fa-remove"></span>
+                                    <span class="d-none d-md-inline">Delete</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
