--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -1,16 +1,10 @@
 <div class="row">
     <div class="col-md-4 col-sm-5">
-        <jhi-music-sidebar [playLists]="playLists"></jhi-music-sidebar>
+        <jhi-music-sidebar [playLists]="playLists" (getPlaylistChange)="changePlaylist($event)"></jhi-music-sidebar>
     </div>
-    <div class="col-md-8 col-sm-7">
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
-            <div>TODO CREATE AND ADD PLAYLIST COMPONENT HERE</div>
+    <div class="col-md-8 col-sm-7 playlistView">
+        <div *ngIf="selectedPlaylist">
+            <jhi-playlist-view [playlist]="selectedPlaylist"></jhi-playlist-view>
+        </div>
     </div>
 </div>
