setup browse music view + update database

--- a/src/main/webapp/app/entities/track/track.component.html
+++ b/src/main/webapp/app/entities/track/track.component.html
@@ -1,10 +1,10 @@
 <div>
     <h2>
-        <span>Play Lists</span>
-        <button class="btn btn-primary float-right jh-create-entity create-play-list" [routerLink]="['/', { outlets: { popup: ['play-list-new'] } }]">
+        <span>Tracks</span>
+        <button class="btn btn-primary float-right jh-create-entity create-track" [routerLink]="['/', { outlets: { popup: ['track-new'] } }]">
             <span class="fa fa-plus"></span>
             <span >
-            Create new Play List
+            Create new Track
             </span>
         </button>
     </h2>
@@ -12,35 +12,37 @@
     <div class="row">
     </div>
     <br/>
-    <div class="table-responsive" *ngIf="playLists">
+    <div class="table-responsive" *ngIf="tracks">
         <table class="table table-striped">
             <thead>
             <tr>
             <th><span>ID</span></th>
             <th><span>Name</span></th>
-            <th><span>Track</span></th>
+            <th><span>Album</span></th>
+            <th><span>Artist</span></th>
+            <th><span>Imagesurl</span></th>
+            <th><span>Previewurl</span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let playList of playLists ;trackBy: trackId">
-                <td><a [routerLink]="['../play-list', playList.id ]">{{playList.id}}</a></td>
-                <td>{{playList.name}}</td>
-                <td>
-                    <span *ngFor="let track of playList.tracks; let last = last">
-                            <a class="form-control-static" [routerLink]="['../track', track?.id ]">{{track.id}}</a>{{last ? '' : ', '}}
-                        </span>
-                </td>
+            <tr *ngFor="let track of tracks ;trackBy: trackId">
+                <td><a [routerLink]="['../track', track.id ]">{{track.id}}</a></td>
+                <td>{{track.name}}</td>
+                <td>{{track.album}}</td>
+                <td>{{track.artist}}</td>
+                <td>{{track.imagesurl}}</td>
+                <td>{{track.previewurl}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
-                                [routerLink]="['../play-list', playList.id ]"
+                                [routerLink]="['../track', track.id ]"
                                 class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline">View</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'track/'+ track.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-primary btn-sm">
@@ -48,7 +50,7 @@
                             <span class="d-none d-md-inline">Edit</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/delete'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'track/'+ track.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-danger btn-sm">
