--- a/src/main/webapp/app/musicView/playlist-view/playlist-view.component.html
+++ b/src/main/webapp/app/musicView/playlist-view/playlist-view.component.html
@@ -13,7 +13,7 @@
         <td>TODO LONG ARTIST NAME{{track.artist}}</td>
         <td>TODO {{track.album}}</td>
         <td>
-          <span class="fa fa-plus fa-lg"></span>
+          <span class="fa fa-trash fa-lg"></span>
         </td>
       </tr>
     </table>
