--- a/src/main/webapp/app/musicView/search-music-view/search-music-view.component.html
+++ b/src/main/webapp/app/musicView/search-music-view/search-music-view.component.html
@@ -5,11 +5,12 @@
     <input type="text" placeholder="Search.." name="search">
   </div>
 </div>
-<div class="search-results">
-  <h3>Napster Results</h3>
-  <div *ngFor="let result of napsterResults">{{result}}</div>
-  <h3>Deezer Results</h3>
-  <div *ngFor="let result of napsterResults">{{result}}</div>
-  <h3>Spotify Results</h3>
-  <div *ngFor="let result of napsterResults">{{result}}</div>
+<div class="search-results" *ngFor="let provider of availableProviders">
+  <h3 class="search-result-title">{{provider}}</h3>
+  <div *ngIf="searchResults.hasOwnProperty(provider)" class="sub-search-results">
+    <div *ngFor="let result of searchResults[provider]">{{result.name}}</div>
+  </div>
+  <div *ngIf="!searchResults.hasOwnProperty(provider)" class="sub-search-results">
+    <span>No results found</span>
+  </div>
 </div>
