setup audio player

--- a/src/main/webapp/app/musicView/playlist-view/playlist-view.component.html
+++ b/src/main/webapp/app/musicView/playlist-view/playlist-view.component.html
@@ -10,8 +10,8 @@
       </tr>
       <tr *ngFor="let track of playlist.tracks" class="track">
         <td>{{track.name}}</td>
-        <td>TODO LONG ARTIST NAME{{track.artist}}</td>
-        <td>TODO {{track.album}}</td>
+        <td>{{track.artist}}</td>
+        <td>{{track.album}}</td>
         <td>
           <span class="fa fa-trash fa-lg"></span>
         </td>
