--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -11,3 +11,8 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12 col-sm-12">
+        <jhi-audio-player></jhi-audio-player>
+    </div>
+</div>
