--- a/src/main/webapp/app/musicView/search-music-view/search-music-view.css
+++ b/src/main/webapp/app/musicView/search-music-view/search-music-view.css
@@ -28,6 +28,8 @@ input {
 
 .search-results {
     width: 100%;
+    max-height: 500px;
+    overflow-y: scroll;
 }
 
 .sub-search-results {
@@ -52,4 +54,8 @@ td {
     padding: 5px 0;
     text-align: left;
     max-width: 300px;
+}
+
+.no-search-results {
+    padding: 5px 0;
 }
