setup logic to change song in player

--- a/src/main/webapp/app/musicView/audio-player/audio-player.component.html
+++ b/src/main/webapp/app/musicView/audio-player/audio-player.component.html
@@ -1,10 +1,5 @@
 <div class="audio-player">
-  <p>
-    audio-player works!
-  </p>
-  <vg-player>
-    <audio #media id="singleAudio" preload="auto" controls>
-      <source src="http://static.videogular.com/assets/audios/videogular.mp3" type="audio/mp3">
-    </audio>
-  </vg-player>
+  <audio #media id="singleAudio" preload="auto" controls on-ended="playNextSong()">
+    <source src="http://static.videogular.com/assets/audios/videogular.mp3" type="audio/mpeg">
+  </audio>
 </div>
