--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -7,12 +7,12 @@
             <jhi-search-music-view></jhi-search-music-view>
         </div>
         <div *ngIf="selectedPlaylist">
-            <jhi-playlist-view [playlist]="selectedPlaylist"></jhi-playlist-view>
+            <jhi-playlist-view [playlist]="selectedPlaylist" (newTrackId)=changeTrack($event)></jhi-playlist-view>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12 col-sm-12">
-        <jhi-audio-player></jhi-audio-player>
+        <jhi-audio-player [playingTrack]="playingTrack"></jhi-audio-player>
     </div>
 </div>
