--- a/src/main/webapp/app/musicView/music-sidebar/play-list-detail.component.html
+++ b/src/main/webapp/app/musicView/music-sidebar/play-list-detail.component.html
@@ -27,7 +27,7 @@
     </button>
 
     <button type="button" [routerLink]="['/', { outlets: { popup: 'play-list/'+ playList.id + '/edit'} }]" replaceUrl="true"
-        queryParamsHandling="merge" class="btn btn-primary">
+        queryParamsHandling="merge" class="btn btn-custom">
         <span class="fa fa-pencil"></span>&nbsp;
         <span> Edit</span>
     </button>
