--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -16,7 +16,8 @@
             </div>
 
             <p class="alert alert-success" *ngIf="success">
-                <span><strong>Your password has been reset.</strong> Please </span>
+                <span>
+                    <strong>Your password has been reset.</strong> Please </span>
                 <a class="alert-link" (click)="login()">sign in</a>.
             </p>
 
@@ -28,20 +29,16 @@
                 <form *ngIf="!success" name="form" role="form" (ngSubmit)="finishReset()" #passwordForm="ngForm">
                     <div class="form-group">
                         <label class="form-control-label" for="password">New password</label>
-                        <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
-                               placeholder="New password"
-                               [(ngModel)]="resetAccount.password" minlength=4 maxlength=50 required>
+                        <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel" placeholder="New password"
+                            [(ngModel)]="resetAccount.password" minlength=4 maxlength=50 required>
                         <div *ngIf="passwordInput.dirty && passwordInput.invalid">
-                            <small class="form-text text-danger"
-                               *ngIf="passwordInput.errors.required">
+                            <small class="form-text text-danger" *ngIf="passwordInput.errors.required">
                                 Your password is required.
                             </small>
-                            <small class="form-text text-danger"
-                               *ngIf="passwordInput.errors.minlength">
+                            <small class="form-text text-danger" *ngIf="passwordInput.errors.minlength">
                                 Your password is required to be at least 4 characters.
                             </small>
-                            <small class="form-text text-danger"
-                               *ngIf="passwordInput.errors.maxlength">
+                            <small class="form-text text-danger" *ngIf="passwordInput.errors.maxlength">
                                 Your password cannot be longer than 50 characters.
                             </small>
                         </div>
@@ -50,25 +47,21 @@
 
                     <div class="form-group">
                         <label class="form-control-label" for="confirmPassword">New password confirmation</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel"
-                               placeholder="Confirm the new password"
-                               [(ngModel)]="confirmPassword" minlength=4 maxlength=50 required>
+                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel" placeholder="Confirm the new password"
+                            [(ngModel)]="confirmPassword" minlength=4 maxlength=50 required>
                         <div *ngIf="confirmPasswordInput.dirty && confirmPasswordInput.invalid">
-                            <small class="form-text text-danger"
-                               *ngIf="confirmPasswordInput.errors.required">
+                            <small class="form-text text-danger" *ngIf="confirmPasswordInput.errors.required">
                                 Your password confirmation is required.
                             </small>
-                            <small class="form-text text-danger"
-                               *ngIf="confirmPasswordInput.errors.minlength">
+                            <small class="form-text text-danger" *ngIf="confirmPasswordInput.errors.minlength">
                                 Your password confirmation is required to be at least 4 characters.
                             </small>
-                            <small class="form-text text-danger"
-                               *ngIf="confirmPasswordInput.errors.maxlength">
+                            <small class="form-text text-danger" *ngIf="confirmPasswordInput.errors.maxlength">
                                 Your password confirmation cannot be longer than 50 characters.
                             </small>
                         </div>
                     </div>
-                    <button type="submit" [disabled]="passwordForm.form.invalid" class="btn btn-primary">Reset Password</button>
+                    <button type="submit" [disabled]="passwordForm.form.invalid" class="btn btn-custom">Reset Password</button>
                 </form>
             </div>
 
