--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -18,28 +18,24 @@
             <form *ngIf="!success" name="form" role="form" (ngSubmit)="requestReset()" #resetRequestForm="ngForm">
                 <div class="form-group">
                     <label class="form-control-label" for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email"
-                           [(ngModel)]="resetAccount.email" minlength=5 maxlength=100 #emailInput="ngModel" email required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email" [(ngModel)]="resetAccount.email"
+                        minlength=5 maxlength=100 #emailInput="ngModel" email required>
                     <div *ngIf="emailInput.dirty && emailInput.invalid">
-                        <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.required">
+                        <small class="form-text text-danger" *ngIf="emailInput.errors.required">
                             Your email is required.
                         </small>
-                        <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.email">
+                        <small class="form-text text-danger" *ngIf="emailInput.errors.email">
                             Your email is invalid.
                         </small>
-                        <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.minlength">
+                        <small class="form-text text-danger" *ngIf="emailInput.errors.minlength">
                             Your email is required to be at least 5 characters.
                         </small>
-                        <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.maxlength">
+                        <small class="form-text text-danger" *ngIf="emailInput.errors.maxlength">
                             Your email cannot be longer than 100 characters.
                         </small>
                     </div>
                 </div>
-                <button type="submit" [disabled]="resetRequestForm.form.invalid" class="btn btn-primary">Reset</button>
+                <button type="submit" [disabled]="resetRequestForm.form.invalid" class="btn btn-custom">Reset</button>
             </form>
 
         </div>
