--- a/src/main/webapp/app/admin/health/health.component.html
+++ b/src/main/webapp/app/admin/health/health.component.html
@@ -1,8 +1,9 @@
 <div>
     <h2>
         <span>Health Checks</span>
-        <button class="btn btn-primary float-right" (click)="refresh()">
-            <span class="fa fa-refresh"></span> <span>Refresh</span>
+        <button class="btn btn-custom float-right" (click)="refresh()">
+            <span class="fa fa-refresh"></span>
+            <span>Refresh</span>
         </button>
     </h2>
     <div class="table-responsive">
@@ -16,7 +17,8 @@
             </thead>
             <tbody>
                 <tr *ngFor="let health of healthData">
-                    <td><span class="text-capitalize">{{ baseName(health.name) }}</span> {{subSystemName(health.name)}}</td>
+                    <td>
+                        <span class="text-capitalize">{{ baseName(health.name) }}</span> {{subSystemName(health.name)}}</td>
                     <td class="text-center">
                         <span class="badge" [ngClass]="getBadgeClass(health.status)">
                             {{health.status}}
