--- a/src/main/webapp/app/entities/play-list/play-list-dialog.component.html
+++ b/src/main/webapp/app/entities/play-list/play-list-dialog.component.html
@@ -2,20 +2,17 @@
 
     <div class="modal-header">
         <h4 class="modal-title" id="myPlayListLabel">Create or edit a Play List</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-                (click)="clear()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
         <div class="form-group" [hidden]="!playList.id">
             <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                   [(ngModel)]="playList.id" readonly />
+            <input type="text" class="form-control" id="id" name="id" [(ngModel)]="playList.id" readonly />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name"
-                [(ngModel)]="playList.name" />
+            <input type="text" class="form-control" name="name" id="field_name" [(ngModel)]="playList.name" />
         </div>
 
         <div class="form-group">
@@ -27,10 +24,12 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
-            <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
+            <span class="fa fa-ban"></span>&nbsp;
+            <span>Cancel</span>
         </button>
-        <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-            <span class="fa fa-save"></span>&nbsp;<span>Save</span>
+        <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-custom">
+            <span class="fa fa-save"></span>&nbsp;
+            <span>Save</span>
         </button>
     </div>
 </form>
