--- a/src/main/webapp/app/musicView/track/track-dialog.component.html
+++ b/src/main/webapp/app/musicView/track/track-dialog.component.html
@@ -2,49 +2,44 @@
 
     <div class="modal-header">
         <h4 class="modal-title" id="myTrackLabel">Create or edit a Track</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-                (click)="clear()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
         <div class="form-group" [hidden]="!track.id">
             <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                   [(ngModel)]="track.id" readonly />
+            <input type="text" class="form-control" id="id" name="id" [(ngModel)]="track.id" readonly />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name"
-                [(ngModel)]="track.name" />
+            <input type="text" class="form-control" name="name" id="field_name" [(ngModel)]="track.name" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_album">Album</label>
-            <input type="text" class="form-control" name="album" id="field_album"
-                [(ngModel)]="track.album" />
+            <input type="text" class="form-control" name="album" id="field_album" [(ngModel)]="track.album" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_artist">Artist</label>
-            <input type="text" class="form-control" name="artist" id="field_artist"
-                [(ngModel)]="track.artist" />
+            <input type="text" class="form-control" name="artist" id="field_artist" [(ngModel)]="track.artist" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_imagesurl">Imagesurl</label>
-            <input type="text" class="form-control" name="imagesurl" id="field_imagesurl"
-                [(ngModel)]="track.imagesurl" />
+            <input type="text" class="form-control" name="imagesurl" id="field_imagesurl" [(ngModel)]="track.imagesurl" />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_previewurl">Previewurl</label>
-            <input type="text" class="form-control" name="previewurl" id="field_previewurl"
-                [(ngModel)]="track.previewurl" />
+            <input type="text" class="form-control" name="previewurl" id="field_previewurl" [(ngModel)]="track.previewurl" />
         </div>
 
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
-            <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
+            <span class="fa fa-ban"></span>&nbsp;
+            <span>Cancel</span>
         </button>
-        <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-            <span class="fa fa-save"></span>&nbsp;<span>Save</span>
+        <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-custom">
+            <span class="fa fa-save"></span>&nbsp;
+            <span>Save</span>
         </button>
     </div>
 </form>
