--- a/src/main/webapp/app/musicView/search-music-view/search-music-view.css
+++ b/src/main/webapp/app/musicView/search-music-view/search-music-view.css
@@ -16,14 +16,19 @@
     width: 25px;
 }
 
+form,
+.form-group {
+    width: 100%;
+}
+
 input {
     outline: 0;
     color: grey;
     border: none;
     font-size: 16px;
     font-weight: 100;
-    flex-grow: 1;
     align-self: stretch;
+    width: 90%;
 }
 
 .search-results {
@@ -51,12 +56,9 @@ table {
 }
 th,
 td {
-    padding: 8px;
+    padding: 8px 15px;
     text-align: left;
     max-width: 300px;
-}
-tbody tr:nth-child(odd) {
-    background-color: #dad6da;
 }
 
 .no-search-results {
@@ -65,4 +67,44 @@ tbody tr:nth-child(odd) {
 
 .selectedTrack {
     background-color: #fcc387;
+}
+
+.container {
+    position: relative;
+    padding: 0;
+    max-width: 50px;
+}
+
+.album-img {
+    max-width: 50px;
+    margin: 0;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: hsla(0, 0%, 50%, 0.2);
+}
+.overlay:hover {
+    background: hsla(0, 0%, 50%, 0.4);
+}
+
+.icon {
+    position: absolute;
+    right: 18px;
+    bottom: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+}
+
+.fa-play-circle {
+    color: #fff;
+}
+
+.overlay:hover .fa-play-circle {
+    color: #26272a;
 }
