--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -11,6 +11,11 @@ h4 {
     color: #454548;
 }
 
+.table-row:hover {
+    background-color: #fba26f !important;
+    cursor: pointer;
+}
+
 .menu-button:hover {
     background-color: #fba26f;
     border-radius: 2px;
@@ -46,6 +51,10 @@ h4 {
 
 .no-margin {
     margin: 0;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #dad6da;
 }
 
 body {
