playlist handling and css tweeks

--- a/src/main/webapp/app/musicView/audio-player/audio-player.component.html
+++ b/src/main/webapp/app/musicView/audio-player/audio-player.component.html
@@ -1,5 +1,5 @@
 <div class="audio-player">
-  <audio #audio id="singleAudio" preload="auto" controls on-ended="playNextSong()" on-play="play()" on-pause="pause()">
+  <audio #audio id="singleAudio" preload="auto" controls on-ended="playNextSong()" on-play="onPlay()" on-pause="onPause()">
     <source src="" type="audio/mpeg">
   </audio>
 </div>
