--- a/src/main/webapp/app/musicView/search-music-view/search-music-view.css
+++ b/src/main/webapp/app/musicView/search-music-view/search-music-view.css
@@ -42,8 +42,11 @@ input {
 }
 
 .search-result-title {
-    color: grey;
-    font-size: 20px;
+    background-color: #515254;
+    color: white;
+    font-size: 24px;
+    padding: 5px 10px;
+    border-radius: 2px;
 }
 
 .search-result-tracks {
@@ -63,6 +66,8 @@ td {
 
 .no-search-results {
     padding: 5px 0;
+    font-size: 18px;
+    color: grey;
 }
 
 .selectedTrack {
@@ -107,4 +112,28 @@ td {
 
 .overlay:hover .fa-play-circle {
     color: #26272a;
+}
+
+.add-track-container {
+    position: relative;
+}
+
+ul {
+    list-style: none;
+    padding: 5px;
+    border-color: grey;
+    background-color: #fff;
+    min-width: 150px;
+    position: absolute;
+    top: 20px;
+    left: -150px;
+    z-index: 100;
+}
+
+ul li {
+    padding: 5px;
+}
+ul li:hover {
+    background-color: #fcc387;
+    cursor: pointer;
 }
