--- a/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
+++ b/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </h2>
-    <h2 class="no-margin">
+    <h2 class="bottom-margin">
         <span>Playlists</span>
         <button class="btn btn-custom float-right jh-create-entity create-play-list" [routerLink]="['/', { outlets: { popup: ['play-list-new'] } }]">
             <span class="fa fa-plus"></span>
