--- a/src/main/webapp/app/musicView/musicView.css
+++ b/src/main/webapp/app/musicView/musicView.css
@@ -6,3 +6,12 @@
     visibility: hidden;
     height: 0;
 }
+
+.audio-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(224, 98, 49, 0.75);
+    padding: 15px;
+}
