--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -49,6 +49,10 @@ h4 {
     color: #57575b;
 }
 
+.revert-text {
+    color: #fff;
+}
+
 .no-margin {
     margin: 0;
 }
@@ -101,6 +105,7 @@ Generic styles
     padding: 1.5%;
     margin-top: 20px;
     border: none;
+    max-height: 485px;
 }
 
 .error {
