--- a/src/main/webapp/app/musicView/playlist-view/playlist-view.css
+++ b/src/main/webapp/app/musicView/playlist-view/playlist-view.css
@@ -2,20 +2,12 @@
     color: #c3c5c8;
     font-size: 22px;
 }
-.track-list {
-    width: 100%;
-}
-th,
-td {
-    padding: 15px;
-    text-align: left;
-    max-width: 300px;
-}
 
 .fa-trash {
     padding: 5px;
 }
 
-.selectedTrack {
-    background-color: #c3c5c8;
+.playlist {
+    max-height: 375px;
+    overflow-y: scroll;
 }
