--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -75,6 +75,60 @@ a:hover {
     font-weight: bold;
 }
 
+table {
+    width: 100%;
+}
+th,
+td {
+    padding: 8px 15px;
+    text-align: left;
+    max-width: 300px;
+}
+
+.selectedTrack {
+    background-color: #fcc387;
+}
+
+.album-img-container {
+    position: relative;
+    padding: 0;
+    max-width: 50px;
+}
+
+.album-img {
+    max-width: 50px;
+    margin: 0;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: hsla(0, 0%, 50%, 0.2);
+}
+.overlay:hover {
+    background: hsla(0, 0%, 50%, 0.4);
+}
+
+.icon {
+    position: absolute;
+    right: 18px;
+    bottom: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+}
+
+.fa-play-circle {
+    color: #fff;
+}
+
+.overlay:hover .fa-play-circle {
+    color: #26272a;
+}
+
 /* ==========================================================================
 Browser Upgrade Prompt
 ========================================================================== */
