--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -4,16 +4,14 @@
     </div>
     <div class="col-md-8 col-sm-7 playlistView">
         <div [ngClass]="{hide: !isSearchMusicSelected}">
-            <jhi-search-music-view (newTrack)=changeTrack($event) (playNewTrackEvent)=playNewTrack($event) (playTrackEvent)="playTrack($event)"
-                (pauseTrackEvent)=pauseTrack($event)></jhi-search-music-view>
+            <jhi-search-music-view (newTrack)=selectTrack($event)></jhi-search-music-view>
         </div>
         <div [ngClass]="{hide: !selectedPlaylist}">
-            <jhi-playlist-view [playlist]="selectedPlaylist" (newTrack)=changeTrack($event)></jhi-playlist-view>
+            <jhi-playlist-view [playlist]="selectedPlaylist" (newTrack)=selectTrack($event)></jhi-playlist-view>
         </div>
     </div>
 </div>
 
 <div class="audio-container">
-    <jhi-audio-player [playingTrack]="selectedTrack" [selectedPlaylist]="selectedPlaylist" (playNextSongEvent)="stopTrack()"
-        (playTrackEvent)="playTrack($event)" (pauseTrackEvent)=pauseTrack($event)></jhi-audio-player>
+    <jhi-audio-player [selectedPlaylist]="selectedPlaylist" (playNextSongEvent)="stopTrack()"></jhi-audio-player>
 </div>
